--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,67 @@
   box-sizing: border-box;
 }
 
+.header {
+  height: 20vh;
+  text-align: center;
+  margin: auto;
+  line-height: 8em;
+  color: #000000;
+  position: fixed;
+  width: 100%;
+  background: #a9e4f7;
+  background: -moz-linear-gradient(top, #a9e4f7 0%, #0fb4e7 100%);
+  background: -webkit-linear-gradient(top, #a9e4f7 0%, #0fb4e7 100%);
+  background: linear-gradient(to bottom, #a9e4f7 0%, #0fb4e7 100%);
+}
+
+.outer-main-container {
+  background: #b2e1ff;
+  background: -moz-linear-gradient(top, #b2e1ff 0%, #66b6fc 100%);
+  background: -webkit-linear-gradient(top, #b2e1ff 0%, #66b6fc 100%);
+  background: linear-gradient(to bottom, #b2e1ff 0%, #66b6fc 100%);
+
+  margin: auto;
+}
+
+.main-container:first-child {
+  padding-top: 210px;
+}
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  padding-bottom: 40px;
+}
+
+.ranking-number {
+  margin-right: 50px;
+  font-size: 7em;
+}
+
+.main-inner-container {
+  padding-left: 40px;
+  width: 230px;
+}
+
 .poster {
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
+  border-radius: 8px;
+}
+
+.inner-container-content {
+  margin: 4px 0;
+}
+
+.uploader-img-container {
+  padding-left: 95px;
+}
+
+.uploader-img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  align-items: flex-end;
 }
