--- a/src/App.css
+++ b/src/App.css
@@ -12,19 +12,26 @@
   color: #000000;
   position: fixed;
   width: 100%;
-  background: #a9e4f7;
-  background: -moz-linear-gradient(top, #a9e4f7 0%, #0fb4e7 100%);
-  background: -webkit-linear-gradient(top, #a9e4f7 0%, #0fb4e7 100%);
-  background: linear-gradient(to bottom, #a9e4f7 0%, #0fb4e7 100%);
+  background-image: linear-gradient(
+    to right top,
+    #7ac9ca,
+    #6dc5d3,
+    #66c0db,
+    #67bae2,
+    #70b3e7,
+    #6eb7ed,
+    #6cbbf2,
+    #69bff8,
+    #52cffe,
+    #41dfff,
+    #46eefa,
+    #5ffbf1
+  );
+  z-index: 10;
 }
 
 .outer-main-container {
-  background: #b2e1ff;
-  background: -moz-linear-gradient(top, #b2e1ff 0%, #66b6fc 100%);
-  background: -webkit-linear-gradient(top, #b2e1ff 0%, #66b6fc 100%);
-  background: linear-gradient(to bottom, #b2e1ff 0%, #66b6fc 100%);
-
-  margin: auto;
+  background: #000000;
 }
 
 .main-container:first-child {
@@ -41,6 +48,37 @@
 .ranking-number {
   margin-right: 50px;
   font-size: 7em;
+  font-family: "Courgette", cursive;
+  background: linear-gradient(
+    90deg,
+    #d16ba5,
+    #c777b9,
+    #ba83ca,
+    #aa8fd8,
+    #9a9ae1,
+    #8aa7ec,
+    #79b3f4,
+    #69bff8,
+    #52cffe,
+    #41dfff,
+    #46eefa,
+    #5ffbf1
+  );
+  background-size: 400%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: relative;
+  animation: title-animation 20s linear infinite;
+}
+
+@keyframes title-animation {
+  0% {
+    background-position: 0;
+  }
+
+  100% {
+    background-position: 400%;
+  }
 }
 
 .main-inner-container {
@@ -56,6 +94,11 @@
 
 .inner-container-content {
   margin: 4px 0;
+  color: #ffffff;
+}
+
+.atag {
+  color: #ffffff;
 }
 
 .uploader-img-container {
@@ -67,4 +110,56 @@
   width: 50px;
   border-radius: 50%;
   align-items: flex-end;
+}
+
+button {
+  position: relative;
+  font-family: "Courgette", cursive;
+  cursor: pointer;
+  border: none;
+  font-size: 1rem;
+  color: #ffffff;
+  padding: 5px 15px;
+  text-transform: uppercase;
+  background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+  background-size: 400%;
+  border-radius: 30px;
+  z-index: 1;
+}
+
+button:hover {
+  animation: btn-animation 8s linear infinite;
+}
+
+@keyframes btn-animation {
+  0% {
+    background-position: 0;
+  }
+  100% {
+    background-position: 400%;
+  }
+}
+
+button:before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  z-index: -1;
+  background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+  background-size: 400%;
+  border-radius: 40px;
+  opacity: 0;
+  transition: 0.5s;
+}
+button:focus {
+  outline: none;
+}
+
+button:hover::before {
+  filter: blur(10px);
+  opacity: 1;
+  animation: btn-animation 8s linear infinite;
 }
